Performance optimizations and cleanup
- Optimized font loading with preconnect
- Deferred Google Analytics to improve page load
- Made first carousel image eager-loaded with fetchpriority
- Optimized video loading (preload=none, load on visibility)
- Added resource hints for third-party widgets
- Added inline critical CSS for above-the-fold content
- Removed duplicate preconnect tags
- Removed unnecessary files: .cpanel.yml, .htaccess, performance-summary.md, deploy.zip
- Cleaned up redundant apple-touch-icon entries
- Updated .gitignore to exclude deployment and documentation files

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,15 @@ Thumbs.db
 *.bak
 *.log
 CLEANUP_CHECKLIST.md
+deploy.zip
+*.md
+!README.md
+DNS_*.txt
+DNS_*.md
+AUTODISCOVER_*.md
+performance-summary.md
 
 # Node modules (if any)
 node_modules/
+
 
