Add backend API with MongoDB integration for contact form
- Integrated MongoDB for storing contact form submissions
- Added Node.js/Express backend server with API endpoints
- Created contact form backend route with validation and rate limiting
- Updated contact form frontend to submit to backend API
- Added character counter (0/200) and progress bar to message field
- Implemented character limit validation with visual feedback
- Added security features: Helmet, rate limiting, input validation
- Created MongoDB connection configuration and Contact model
- Added comprehensive error handling and logging
- Created configuration files for frontend (config.js, logger.js)
- Added backend documentation (MONGODB_SETUP.md, etc.)
- Updated chatbot integration with backend proxy
- Fixed HTTP 405 error by making MongoDB connection non-blocking

--- a/.gitignore
+++ b/.gitignore
@@ -19,16 +19,18 @@ Thumbs.db
 *.tmp
 *.bak
 *.log
-CLEANUP_CHECKLIST.md
 deploy.zip
-*.md
-!README.md
 DNS_*.txt
 DNS_*.md
 AUTODISCOVER_*.md
 performance-summary.md
+CLEANUP_CHECKLIST.md
 
 # Node modules (if any)
 node_modules/
+
+# Backend environment variables
+backend/.env
+backend/node_modules/
 
 
