--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "mongoose": "^9.0.0",
+    "nodemailer": "^7.0.12",
     "openai": "^4.20.0",
     "zod": "^3.22.4"
   }
