Fix duplicate footer issue and align hero section styling across pages
- Fix footer injection script to remove existing footers before inserting to prevent duplicates
- Wrap hero text content on Events, Workshops, and Displays pages in cards with coreChampers background to match About page styling
- Remove special padding rules for Events/Workshops/Displays pages to ensure consistent spacing
- Add responsive margin classes for proper mobile spacing on hero sections
- Add GSAP animation system (scripts/animations.js, styles/motion.css)
- Add MOTION_ARCHITECTURE.md documentation
- Include proposal PDFs for reference (exclude large 50th Birthday PDF)

--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,7 @@ node_modules/
 backend/.env
 backend/node_modules/
 
+# Large PDF files (exceed GitHub 100MB limit)
+FINAL Centuria 140sgt 50th Birthday.pdf
+
 
