Update case study pages, gallery carousels, and LinkedIn links
- Updated all case study pages to use single hero images and Success Stories carousel
- Updated gallery page carousels: events (Centuria 50th & Connect140), workshops (all folders), displays (all images from displays page)
- Replaced case studies section on gallery with interactive carousel
- Changed all LinkedIn links from personal profile to company page (bloom-n-events-co)
- Added large video file to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ backend/node_modules/
 FINAL Centuria 140sgt 50th Birthday.pdf
 
 
+images/Capabilities/IMG_1244.mov
+images/Capabilities/IMG_1244.mov
