Fix footer height constraint and container overflow issues
- Set footer min-height to 500px to ensure full content visibility
- Fix footer container overflow beyond footer boundaries
- Move acknowledgement section back outside footer (before footer tag)
- Ensure footer container respects viewport width with max-width: min(2138px, 100%)
- Add overflow constraints to prevent horizontal scrolling
- Update footer CSS for proper height expansion (height: auto, max-height: none)
- Add specific rules for footer class combinations (footer.bg-dark, footer.py-3)

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,13 @@ CLEANUP_CHECKLIST.md
 # Node modules (if any)
 node_modules/
 
+# Build output
+dist/
+.vite/
+
+# Optimized images (generated, can be regenerated)
+assets/images/optimized/
+
 # Backend environment variables
 backend/.env
 backend/.env.local
