Fix: Multiple responsive and functionality improvements
- Fixed hero video autoplay (changed preload from none to auto, added JS handling)
- Fixed navbar positioning on index page (removed inline styles, improved CSS)
- Fixed footer logo visibility and centering on responsive screens
- Fixed gap between navbar and anchor-nav on gallery page
- Fixed character counter positioning in contact form (bottom right)
- Fixed contact page responsive layout (background image stays behind content)
- Fixed footer visibility on contact page (z-index)
- Added comprehensive cache clearing before page load
- Updated service worker cache version management
- Added cache control headers and meta tags

--- a/.htaccess
+++ b/.htaccess
@@ -39,6 +39,13 @@
     
     # Permissions Policy (formerly Feature-Policy)
     Header always set Permissions-Policy "geolocation=(), microphone=(), camera=()"
+    
+    # Cache Control for HTML - Always fetch fresh HTML
+    <FilesMatch "\.(html|htm)$">
+        Header set Cache-Control "no-cache, no-store, must-revalidate, max-age=0"
+        Header set Pragma "no-cache"
+        Header set Expires "0"
+    </FilesMatch>
 </IfModule>
 
 # Compression
