feat: Complete all outstanding optimizations and automation
CSP Security Improvements:
- Moved inline cache clearing script to assets/js/cache-clear.js
- Moved inline contact form script to assets/js/contact-form.js
- All JavaScript now in external files for better security

GitHub Actions CI/CD:
- Added deploy.yml for automated deployment with testing
- Added cache-version.yml for automated cache version bumping
- Added lighthouse.yml for performance auditing

Image Optimization:
- Created update-images-srcset.js script for responsive images
- Added IMAGE_OPTIMIZATION_GUIDE.md with complete instructions
- Enhanced package.json with optimize-all script

Documentation:
- Updated README.md with all new features and improvements
- Created TESTING_CHECKLIST.md for comprehensive testing
- Created IMPLEMENTATION_SUMMARY.md documenting all changes

All outstanding tasks from performance optimization and refactoring are now complete.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "optimize-images": "node scripts/optimize-images.js",
+    "update-srcset": "node scripts/update-images-srcset.js",
+    "optimize-all": "npm run optimize-images && npm run update-srcset",
     "audit-deps": "npm audit",
     "check-accessibility": "node scripts/check-accessibility.js",
     "lint-css": "stylelint 'assets/css/**/*.css'",
