--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "stylelint": "^16.2.1",
     "stylelint-config-standard": "^36.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "openai": "^4.20.0",
+    "nodemailer": "^7.0.12"
+  }
 }
