chore: configure vercel for astro subdir

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
 {
+  "framework": "astro",
+  "installCommand": "cd astro && npm install",
+  "buildCommand": "cd astro && npm run build",
+  "outputDirectory": "astro/dist",
   "headers": [
     {
       "source": "/(.*)",
