--- a/astro/package.json
+++ b/astro/package.json
@@ -6,7 +6,9 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "assets:audit": "node ../scripts/audit-assets.mjs",
+    "assets:prune": "node ../scripts/audit-assets.mjs --delete"
   },
   "dependencies": {
     "@astrojs/react": "^4.4.2",
