--- a/astro/package.json
+++ b/astro/package.json
@@ -6,6 +6,9 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
+    "test": "echo \"No tests configured for the Astro site.\"",
+    "lint": "astro check",
+    "check": "astro check",
     "astro": "astro",
     "assets:audit": "node ../scripts/audit-assets.mjs",
     "assets:prune": "node ../scripts/audit-assets.mjs --delete"
@@ -19,5 +22,9 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "tailwindcss": "^4.1.18"
+  },
+  "devDependencies": {
+    "@astrojs/check": "^0.9.6",
+    "typescript": "^5.4.2"
   }
 }
