--- a/vercel.json
+++ b/vercel.json
@@ -27,11 +27,16 @@
           "key": "Referrer-Policy",
           "value": "strict-origin-when-cross-origin"
         },
-        {
-          "key": "Permissions-Policy",
-          "value": "geolocation=(), microphone=(), camera=(), payment=(), usb=(), magnetometer=(), gyroscope=(), accelerometer=()"
-        }
-      ]
-    }
+      {
+        "key": "Permissions-Policy",
+        "value": "geolocation=(), microphone=(), camera=(), payment=(), usb=(), magnetometer=(), gyroscope=(), accelerometer=()"
+      }
+      ,
+      {
+        "key": "Content-Security-Policy",
+        "value": "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://cdn.jsdelivr.net; connect-src 'self' https://api.openai.com https://www.google-analytics.com; frame-src 'self' https://www.facebook.com https://widgets.sociablekit.com; object-src 'none'; base-uri 'self'; form-action 'self'"
+      }
+    ]
+  }
   ]
 }
