--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vite-plugin-html": "^3.2.2"
   },
   "dependencies": {
+    "hook.js": "^0.1.0",
     "nodemailer": "^7.0.12",
     "openai": "^4.20.0"
   }
