--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@ FINAL Centuria 140sgt 50th Birthday.pdf
 
 images/Capabilities/IMG_1244.mov
 images/Capabilities/IMG_1244.mov
+.vercel
+.env*.local
