Add self-destructing service worker and no-store header

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,15 @@
   "outputDirectory": "astro/dist",
   "headers": [
     {
+      "source": "/sw.js",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-store"
+        }
+      ]
+    },
+    {
       "source": "/(.*)",
       "headers": [
         {
