Remove visual check tooling and clean artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ node_modules/
 # Build output
 dist/
 .vite/
+artifacts/
 
 # Optimized images (generated, can be regenerated)
 assets/images/optimized/
