--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   ],
   "author": "Bloom'n Events Co Pty Ltd",
   "license": "ISC",
+  "dependencies": {
+    "nodemailer": "^6.10.1"
+  },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
     "cssnano": "^6.0.15",
